# configuration_engine

./: .gitignore  Readme.md  pyproject.toml  requirements.txt
configuration_engine/: constants.py
configuration_engine/datasets/: __init__.py  dataset_schema.py  training_dataset.py
configuration_engine/logging/: __init__.py  csv_logger.py  logger.py  yaml_logger.py
configuration_engine/parameter/: __init__.py
src/configuration_engine/: Readme.md  __init__.py  base.py  error.py  parser.py
src/configuration_engine/configuration/: __init__.py  metadata.py  tabular_configuration.py  tabular_schema.py  tabular_utils.py  training_schema.py
src/configuration_engine/configuration/pandas/: __init__.py  tabular_configuration.py  tabular_schema.py  tabular_utils.py
src/configuration_engine/logging/: csv_logger.py
src/configuration_engine/parameter/: __init__.py  nontunable_parameter.py  nontunable_parameter_schema.py  parameter_schema.py  tunable_parameter.py
src/configuration_engine/processing_action/: __init__.py  tabular_processing_action.py  tabular_processing_schema.py
src/configuration_engine/processing_action/pandas/: __init__.py  tabular_processing_schema.py
src/configuration_engine/schema/: __init__.py  base.py  types.py
src/configuration_engine/utils/: __init__.py  functional.py
test/: test_tabular_processing_action.py
test/base/: test_schema.py
test/fixtures/: dataframes.py
test/fixtures/logging/: csv_logger.py
test/logging/: test_csv_logger.py
test/parameter/: test_parameter_schema.py  test_tunable_parameter.py
test/utils/: test_functional.py
