[project]
name = "configuration_engine"
version = "0.1.0"
description = "Configuration engine for machine learning"
readme = "README.md"
license = { text = "MIT" }

authors = [
    { name = "Lucian", email = "fiksio123@gmail.com" }
]

dependencies = [
    "annotated-types==0.7.0",
    "colorama==0.4.6",
    "iniconfig==2.1.0",
    "numpy==2.3.2",
    "packaging==25.0",
    "pandas==2.3.1",
    "pluggy==1.6.0",
    "pydantic==2.11.7",
    "pydantic_core==2.33.2",
    "Pygments==2.19.2",
    "pytest==8.4.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "six==1.17.0",
    "typing-inspection==0.4.1",
    "typing_extensions==4.14.1",
    "tzdata==2025.2"
]
