[project]
name = "configuration_engine"
version = "1.2.0"
description = "Configuration engine for machine learning"
readme = "README.md"
license = { text = "MIT" }

authors = [
    { name = "Lucian", email = "fiksio123@gmail.com" }
]

[tool.poetry.dependencies]
alembic = "^1.16"
annotated-types = "^0.7"
colorama = "^0.4"
colorlog = "^6.9"
greenlet = "^3.2"
iniconfig = "^2.1"
joblib = "^1.5"
Mako = "^1.3"
MarkupSafe = "^3.0"
numpy = "^2.3"
optuna = "^4.4"
packaging = "^25.0"
pandas = "^2.3"
pluggy = "^1.6"
pydantic = "^2.11"
pydantic_core = "^2.33"
Pygments = "^2.19"
pytest = "^8.4"
python-dateutil = "^2.9"
pytz = "^2025.2"
PyYAML = "^6.0"
scikit-learn = "^1.7"
scipy = "^1.16"
six = "^1.17"
SQLAlchemy = "^2.0"
threadpoolctl = "^3.6"
tqdm = "^4.67"
typing-inspection = "^0.4"
typing_extensions = "^4.14"
tzdata = "^2025.2"

[project.optional-dependencies]
torch = [
    "torch>=2.1.0"
]

[tool.setuptools.packages.find]
where = ["src"]