[project]
name = "configuration_engine"
version = "2.2.0"
description = "Configuration engine for machine learning"
readme = "README.md"
license = { text = "MIT" }

authors = [
    { name = "Lucian", email = "fiksio123@gmail.com" }
]

dependencies = [
    "alembic>=1.16.4",
    "annotated-types>=0.7.0",
    "colorama>=0.4.6",
    "colorlog>=6.9.0",
    "greenlet>=3.2.3",
    "iniconfig>=2.1.0",
    "joblib>=1.5.1",
    "Mako>=1.3.10",
    "MarkupSafe>=3.0.2",
    "numpy>=2.3.2",
    "optuna>=4.4.0",
    "packaging>=25.0",
    "pandas>=2.3.1",
    "pluggy>=1.6.0",
    "pydantic>=2.11.7",
    "pydantic_core>=2.33.2",
    "Pygments>=2.19.2",
    "pytest>=8.4.1",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "PyYAML>=6.0.2",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "six>=1.17.0",
    "SQLAlchemy>=2.0.42",
    "threadpoolctl>=3.6.0",
    "tqdm>=4.67.1",
    "typing-inspection>=0.4.1",
    "typing_extensions>=4.14.1",
    "tzdata>=2025.2"
]

[project.optional-dependencies]
torch = [
    "torch>=2.1.0"
]

[tool.setuptools.packages.find]
where = ["src"]